<resources>
    <string name="app_name">Ejercicio-1</string>
    <string name="drawer_open">Abrir Menú</string>
    <string name="drawer_close">Cerrar Menú</string>
    <string name="asignatura">Asignatura</string>
    <string name="hora">Hora</string>
    <string name="d_a">Día</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="tareas_actuales">Tareas Actuales</string>
    <string name="tareas_actuales_">Tareas Actuales</string>
    <string name="ver_calendario">Ver Calendario</string>
    <string name="ver_calendarios">Ver Calendario</string>
    <string name="a_adir_actividad">Añadir Actividad</string>
    <string name="a_adir_actividad_">Añadir Actividad</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_as">Contraseña</string>
    <string name="correo_electr_nicos">Correo electrónico</string>
    <string name="cargando_tareas">Cargando tareas...</string>
    <string name="no_hay_actividades_programadas">No hay actividades programadas.</string>
    <string name="siguiente">Siguiente</string>
    <string name="mes_a_o">Mes Año</string>
    <string name="anterior">Anterior</string>
    <string name="guardar_actividad">Guardar Actividad</string>
    <string name="asignaturas">Asignatura</string>
    <string name="hora_hh_mm">Hora (HH:MM)</string>
    <string name="d_a_yyyy_mm_dd">Día (YYYY-MM-DD)</string>
    <string name="select_language">Seleccionar idioma</string>
    <string-array name="roles">
        <item>Usuario</item>
        <item>Administrador</item>
    </string-array>
</resources>