<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/d_a_yyyy_mm_dd"
        android:inputType="date"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hora_hh_mm"
        android:inputType="time"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/asignaturas"
        android:inputType="textCapWords"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnSaveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_actividad"
        android:textColor="@android:color/white"
        android:backgroundTint="#6200EE"
        android:padding="12dp" />
</LinearLayout>
