<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_a"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asignatura"
        android:textSize="16sp"/>
</LinearLayout>
